--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "keyv": "^4.5.2"
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "@types/node": "^20.1.3",
