--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
+    "rabbitmq-client": "^4.1.0",
     "redis": "^4.6.7"
   },
   "devDependencies": {
