--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@supabase/supabase-js": "^2.21.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "delay": "^6.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
